# display-thingy

./: .envrc.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
deploy/: bootstrap.sh  display-thingy.service  install.sh  update.sh
scripts/: generate_screenshots.py
src/display_thingy/: __init__.py  config.py  display.py  main.py
src/display_thingy/views/: __init__.py  _caldav.py  _render.py  _wiki.py  artic.py  calendar.py  github.py  hackernews.py  reddit.py  rss.py  system.py  tasks.py  weather.py  wikipedia_potd.py  wikiquote.py  wiktionary.py  xkcd.py
tmp/: test_wotd_parser.py
